fix admin password when setting up subdomains

--- a/ansible/roles/windows/ad-subdomain/templates/Install-ADDSDomain.ps1.j2
+++ b/ansible/roles/windows/ad-subdomain/templates/Install-ADDSDomain.ps1.j2
@@ -1,15 +1,14 @@
 Import-Module ADDSDeployment
 
 function InstallADDomain{
-    $user = "Administrator@{{ ad_opts.ParentDomainName }}"
-    $ad_password = ConvertTo-SecureString -String "{{ ad_opts.SafeModeAdministratorPassword }}" -AsPlainText -Force
-    $admin_password = ConvertTo-SecureString -String "{{ ad_admin_password }}" -AsPlainText -Force
-    $credential = New-Object System.Management.Automation.PSCredential($user, $admin_password)
+    $parent_user = "Administrator@{{ ad_opts.ParentDomainName }}"
+    $parent_password = ConvertTo-SecureString -String "Secret123" -AsPlainText -Force
+    $credential = New-Object System.Management.Automation.PSCredential($parent_user, $parent_password)
 
     Install-ADDSDomain -Force -NoRebootOnCompletion:$true -InstallDNS:$true -Credential: $credential
     {%- for key, value in ad_opts.items() -%}
     {%- if key == 'SafeModeAdministratorPassword' %}
-    -{{ key }} $ad_password
+    -{{ key }} (ConvertTo-SecureString -AsPlainText -Force -String "{{ value }}")
     {%- else %}
     -{{ key }} "{{ value }}"
     {%- endif -%}
